--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>
-        Hello Git
+        Hosted with <a href="www.netlify.com">Netlify</a>
     </h1>
     <form>
         <input type="email" placeholder="Enter your email..."/>
