--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
     <h1>
         Hosted with <a href="https://www.netlify.com">Netlify</a>
     </h1>
+    <a href="mailto:sonamp529@gmail.com" class="btn btn-primary contact-btn">Contact me</a>
     <form>
         <input type="email" placeholder="Enter your email..."/>
         <input type="password" placeholder="Enter your password..." />
         <input type="submit" value="Login"/>
     </form>
     <script src="script.js"></script>
+    </div>
 </body>
 </html>
